# fs_api/main.go
@@ -69,6 +69,7 @@ func main() {
 	http.HandleFunc("/api/dir/stats", authMiddleware(loggingMiddleware(GetDirStats)))
 	http.HandleFunc("/api/user/list", authMiddleware(loggingMiddleware(ListUserStats)))
 	http.HandleFunc("/api/group/list", authMiddleware(loggingMiddleware(ListGroupStats)))
+	http.HandleFunc("/api/search", authMiddleware(loggingMiddleware(SearchFiles)))
 
 	fileServer := http.FileServer(http.Dir(staticPath))
 	http.HandleFunc("/", func(w http.ResponseWriter, r *http.Request) {
